Reading into the attached RFC822 message may cause troubles when the first mail section does not contain a content type text/html as osTicket in this case will use the body from the attached mail as content. Email clients will normally show this messages as attachments Especially spam reports will be handled wrongly.
This change will add a option in the admin panel to control whatever the inline message content should be read or treated as attachment in osTicket

--- a/include/i18n/en_US/config.yaml
+++ b/include/i18n/en_US/config.yaml
@@ -44,6 +44,7 @@ core:
     send_login_errors: 1
     save_email_headers: 1
     strip_quoted_reply: 1
+    read_info_attached_rfc822: 1
     ticket_autoresponder: 0
     message_autoresponder: 0
     ticket_notice_active: 1
