--- a/include/i18n/en_US/templates/page/registration-client.yaml
+++ b/include/i18n/en_US/templates/page/registration-client.yaml
@@ -12,13 +12,13 @@ notes: >
     verification. Please use %{link} somewhere in the body.
 name: "Welcome to %{company.name}"
 body: >
-    <h3><strong>Hi %{user.name.first},</strong></h3> We've created an
+    <h3><strong>Hi %{recipient.name.first},</strong></h3> We've created an
     account for you at our help desk at %{url}.<br />
     <br />
     Please follow the link below to confirm your account and gain access to
     your tickets.<br />
     <br />
-    <a href="%{reset_link}">%{confirmation_link}</a><br />
+    <a href="%{link}">%{link}</a><br />
     <br />
     <em style="font-size: small">Your friendly Customer Support System<br
     />%{company.name}</em>
