Initial tip review
  * Drop _table_ titles
  * Drop _button_ titles and contents
  * Fixup titles to remove leading and trailing underscores in titles
  * Remove duplicated namespaces for ticket queue pages
  * Whitespace cleanup

--- a/include/i18n/en_US/help/tips/emails.addnew_email.yaml
+++ b/include/i18n/en_US/help/tips/emails.addnew_email.yaml
@@ -16,106 +16,93 @@
 email_information_settings:
     title: Email Information &amp; Settings
     content: >
-        
+
 email_address:
     title: Email Address
     content: >
-        
+
 email_name:
     title: Email Name
     content: >
-        
+
 setting:
     title: Setting
     content: >
-        
+
 login_information:
     title: Login Information
     content: >
         While this is optional, it is required if IMAP/POP or SMTP (with
         authorization) are enabled.
-        
+
 username:
     title: Username
     content: >
-        
+
 password:
     title: Password
     content: >
-        
+
 mail_account:
     title: Mail Account
     content: >
-        
+
 status:
     title: Status
     content: >
-        
+
 host:
     title: Host
     content: >
-        
+
 port:
     title: Port
     content: >
-        
+
 protocol:
     title: Protocol
     content: >
-        
+
 encryption:
     title: Encryption
     content: >
-        
+
 fetch_frequency:
     title: Fetch Frequency
     content: >
-        
+
 emails_per_fetch:
     title: Emails Per Fetch
     content: >
-        
+
 fetched_emails:
     title: Fetched Emails
     content: >
-        
+
 smtp_settings:
     title: SMTP Settings
     content: >
-        
+
 status:
     title: Status
     content: >
-        
+
 smtp_host:
     title: SMTP Host
     content: >
-        
+
 smtp_port:
     title: SMTP Port
     content: >
-        
-authentication_required_:
-    title: Authentication Required?
+
+authentication_required:
+    title: Authentication Required
     content: >
-        
-allow_header_spoofing_:
-    title: Allow Header Spoofing?
+
+allow_header_spoofing:
+    title: Allow Header Spoofing
     content: >
-        
+
 internal_notes:
     title: Internal Notes
     content: >
-        
-submit_button_:
-    title: Submit (Button)
-    content: >
-        
-reset_button_:
-    title: Reset (Button)
-    content: >
-        
-cancel_button_:
-    title: Cancel (Button)
-    content: >
-        
