--- a/include/i18n/en_US/help/tips/dashboard.staff_directory.yaml
+++ b/include/i18n/en_US/help/tips/dashboard.staff_directory.yaml
@@ -17,21 +17,21 @@ staff_members:
     title: Staff Members
     content: >
         The following table displays the results of the filter above it. If no filter
-        settings are chosen, then all <span class='doc-desc-title'>Agent</span> 
-        (Staff) <span class='doc-desc-title'>Members</span> are displayed, and
+        settings are chosen, then all <span class="doc-desc-title">Agent</span>
+        (Staff) <span class="doc-desc-title">Members</span> are displayed, and
         broken up by pages. See the pages section below to navigate through more
-        results.  
-        
+        results.
+
 apply_filtering_criteria:
     title: Apply Filtering Criteria
     content: >
         Choose a Department that is relevant to your current interests. You may
         also perform a search for a specific Agent.
-        
+
 showing:
     title: Showing…
     content: >
-        Be sure to check the <span class='doc-desc-title'>Page</span> section below
+        Be sure to check the <span class="doc-desc-title">Page</span> section below
         to ensure that there are not more pages displaying more <span
-        class='doc-desc-title'>Agent</span> (Staff)<span class='doc-desc-title'>
+        class="doc-desc-title">Agent</span> (Staff)<span class="doc-desc-title">
         Members.</span>
