--- a/include/i18n/en_US/help/tips/manage.addnew_filter.yaml
+++ b/include/i18n/en_US/help/tips/manage.addnew_filter.yaml
@@ -16,7 +16,7 @@
 filter_name:
     title: Filter Name
     content: >
-        
+
 execution_order:
     title: Execution Order
     content: >
@@ -25,65 +25,65 @@ execution_order:
         lower the number the closer a Ticket Filter is to being the first Filter
         executed. You want to keep your strict and narrow filters (very small
         matches) first and your broad filters (large amount of matches) last. If
-        you enable <span class='doc-desc-title'>Stop Processing Further on
+        you enable <span class="doc-desc-title">Stop Processing Further on
         Match</span>, then only the first matching Filter will be applied.
-        
+
 filter_status:
     title: Filter Status
     content: >
-        
+
 target:
     title: Target
     content: >
         The Target is the source from whom the Ticket was created. So, for example,
         if you choose Web Forms, you are saying that you want to apply  the Ticket
         Filters to those tickets which originated from the Client Interface.
-        
+
 filter_rules:
     title: Filter Rules
     content: >
-        
+
 rules_matching_criteria:
     title: Rules Matching Criteria
     content: >
         If you would like the filter to match any of the rules, and then stop,
         choose Match Any. If you would like all rules of the filter to be matched,
-        choose Match All. 
-        
+        choose Match All.
+
 basic_fields_criterion:
     title: Basic Fields Criterion
     content: >
         The selectable options below this header are those elements which can be
         found in any standard Ticket. Note: the Email option here indicates from
         whom the Email was sent.
-        
+
 custom_fields_criterion:
     title: Custom Fields Criterion
     content: >
         The selectable options below this header are the Custom Fields found in the
-        <span class='doc-desc-title'>Ticket Details</span> Form. If you would like
-        to use one of your <span class='doc-desc-title'>Custom Lists</span> as a
+        <span class="doc-desc-title">Ticket Details</span> Form. If you would like
+        to use one of your <span class="doc-desc-title">Custom Lists</span> as a
         Field Criterion in your Ticket Filter, then you want to edit the Ticket
-        Details Form by adding your Custom List to the Ticket Details Form Fields. 
+        Details Form by adding your Custom List to the Ticket Details Form Fields.
         (To edit the Ticket Details Form, see Admin Panel -> Manage -> Forms ->
         Ticket Details).
-        
+
 criterion_operator:
     title: Criterion Operator
     content: >
         Choose an operator to control what kind of test is performed against the
         chosen field on the left with the value entered in the text field on the
-        right. 
-        
+        right.
+
 filter_actions:
     title: Filter Actions
     content: >
-        
+
 reject_ticket:
     title: Reject Ticket
     content: >
         If this is enabled, all other choices of action below will be ignored.
-        
+
 reply_to_email:
     title: Reply-To Email
     content: >
@@ -93,57 +93,45 @@ reply_to_email:
         Outlook, etc.). This includes header information that informs the Inbound
         Email Client (i.e., recipient) that the Sender is requesting that the Reply
         be routed to a different Email Address from that which it was originally
-        sent. If the <span class='doc-desc-title'>Reply-To Email</span> feature is
+        sent. If the <span class="doc-desc-title">Reply-To Email</span> feature is
         enabled here, then osTicket will honor the Client’s request to respond to
         their noted alternative Email Address.
-        
+
 ticket_auto_response:
     title: Ticket Auto-Response
     content: >
-        
+
 canned_response:
     title: Canned Response
     content: >
         This will cause an email to go out from the Default Email Address (or
         Department’s default if setting is enabled) with the Canned Response chosen
-        here included in the Email. The <span class='doc-desc-title'>New Ticket
+        here included in the Email. The <span class="doc-desc-title">New Ticket
         Auto-Reply</span> Template in an Email Template Set will dictate how the
         Canned Response is included in that Email. What Email Template Set is used
         depends on what Template Set is assigned as Default, or to the relevant
         Department. (To edit Canned Responses, see Staff Panel -> Knowledgebase ->
-        Canned Responses). (To edit the <span class='doc-desc-title'>New Ticket
-        Auto-Reply</span> <span class='doc-desc-title'>Template</span>, see 
-        
+        Canned Responses). (To edit the <span class="doc-desc-title">New Ticket
+        Auto-Reply</span> <span class="doc-desc-title">Template</span>, see
+
 department:
     title: Department
     content: >
-        
+
 priority:
     title: Priority
     content: >
-        
+
 sla_plan:
     title: SLA Plan
     content: >
-        
-auto_assign_to_:
+
+auto_assign_to:
     title: Auto-Assign to…
     content: >
-        
+
 admin_notes:
     title: Admin Notes
     content: >
         These notes are only visible to those whose account type is ‘<span
-        class='doc-desc-title'>Admin</span>.’
-        
-add_filter_button_:
-    title: Add Filter (Button)
-    content: >
-        
-reset_button_:
-    title: Reset (Button)
-    content: >
-        
-cancel_button_:
-    title: Cancel (Button)
-    content: >
+        class="doc-desc-title">Admin</span>.’
