--- a/include/i18n/en_US/help/tips/settings.pages.yaml
+++ b/include/i18n/en_US/help/tips/settings.pages.yaml
@@ -1,5 +1,5 @@
 #
-# This is popup help messages for the Account Panel -> 
+# This is popup help messages for the Account Panel ->
 #
 # Fields:
 # title - Shown in bold at the top of the popover window
@@ -20,23 +20,21 @@ company_information:
         osTicket’s software and its support staff. The information here will appear
         in email signatures (i.e., the footer) when tickets are responded to by
         agents.
-        
-phone_number:
-    title: Phone Number
-    content: >
-        Just ask, what number would the Yellow Pages give me?
-        
+    links:
+      - title: Company Information Form
+        href: /scp/forms.php?type=C
+
 site_pages:
     title: Site Pages
     content: >
         To manage your customize pages, see Admin Panel -> Manage -> Pages.
-        
+
 landing_page:
     title: Landing Page
     content: >
         What page would you like your clients to see when they first “land” on your
         support site (i.e., your installation of osTicket)?
-        
+
 offline_page:
     title: Offline Page
     content: >
@@ -44,20 +42,20 @@ offline_page:
         being updated or maintained? To activate the <span
         class="doc-desc-title">Offline Page</span>, see Admin Panel -> Setting ->
         System -> Helpdesk Status.
-        
+
 default_thank_you_page:
     title: Default Thank-You Page
     content: >
         The <span class="doc-desc-title">thank-you page</span> is displayed to the
         customer when a <span class="doc-desc-title">Client</span> submits a new
         ticket.
-        
+
 logos:
     title: Logos
     content: >
         You may customize the <span class="doc-desc-title">Logo</span> that will be
-        displayed to the Client in the Client Portal (i.e., your Support Site). 
-        
+        displayed to the Client in the Client Portal (i.e., your Support Site).
+
 upload_a_new_logo:
     title: Upload a new logo
     content: >
