--- a/include/i18n/en_US/help/tips/staff.staff_members.yaml
+++ b/include/i18n/en_US/help/tips/staff.staff_members.yaml
@@ -16,83 +16,58 @@
 add_new_staff:
     title: Add New Staff
     content: >
-        
-staff_members_table_:
-    title: Staff Members (Table)
+
+staff_members:
+    title: Staff Members
     content: >
         The following table displays the results of the filter above. If not filter
-        settings are chosen, then all <span class='doc-desc-title'>Agent</span> 
-        (Staff) <span class='doc-desc-title'>Members</span> are displayed, and
+        settings are chosen, then all <span class="doc-desc-title">Agent</span>
+        (Staff) <span class="doc-desc-title">Members</span> are displayed, and
         broken up by pages. See the pages section below to navigate through more
-        results.  
-        
-apply_filtering_criteria_dropdown_fields_apply_button_:
-    title: Apply Filtering Criteria (Dropdown Fields &amp; Apply Button)
-    content: >
-        You may cause the <span class='doc-desc-title'>Agent (</span>Staff<span
-        class='doc-desc-title'>) Members</span> table to display only those <span
-        class='doc-desc-title'>Agents</span> that are relevant to your current
-        interests related to <span class='doc-desc-title'>Departments</span>, <span
-        class='doc-desc-title'>Groups</span>, or <span
-        class='doc-desc-title'>teams</span>.
-        
-showing_:
-    title: Showing…
-    content: >
-        Be sure to check the <span class='doc-desc-title'>Page</span> section below
-        to ensure that there are not more pages displaying more <span
-        class='doc-desc-title'>Agent</span> (Staff)<span class='doc-desc-title'>
-        Members.</span>
-        
-_checkbox_column_:
-    title: (Checkbox Column)
+        results.
+
+checkbox_column:
+    title: Manage Multiple Agents
     content: >
         By choosing a checkbox next to the name of the <span
-        class='doc-desc-title'>Agent</span>(s), you may alter the <span
-        class='doc-desc-title'>Account Status</span> to either Locked or Enabled.
-        If you change the <span class='doc-desc-title'>agent</span>’s status to
+        class="doc-desc-title">Agent</span>(s), you may alter the <span
+        class="doc-desc-title">Account Status</span> to either Locked or Enabled.
+        If you change the <span class="doc-desc-title">agent</span>’s status to
+        Locked, then he/she will not be able to login.<br/>
+        <br/>
+        If you change the <span class="doc-desc-title">agent</span>’s status to
+        Enabled, then all normal account settings established for that <span
+        class="doc-desc-title">Agent</span> will resume.<br/>
+        <br/>
+        If you change the <span class="doc-desc-title">agent</span>’s status to
         Locked, then he/she will not be able to login.
-        
+
 name:
     title: Name
     content: >
-        
+
 username:
     title: Username
     content: >
-        
+
 status:
     title: Status
     content: >
-        This will display whether the <span class='doc-desc-title'>Agent</span> is
+        This will display whether the <span class="doc-desc-title">Agent</span> is
         Locked, Active, or Active (Vacation).
-        
+
 group:
     title: Group
     content: >
-        
+
 department:
     title: Department
     content: >
-        
+
 created:
     title: Created
     content: >
-        
+
 last_login:
     title: Last Login
     content: >
-        
-enable_button_:
-    title: Enable (Button)
-    content: >
-        If you change the <span class='doc-desc-title'>agent</span>’s status to
-        Enabled, then all normal account settings established for that <span
-        class='doc-desc-title'>Agent</span> will resume.
-        
-lock_button_:
-    title: Lock (Button)
-    content: >
-        If you change the <span class='doc-desc-title'>agent</span>’s status to
-        Locked, then he/she will not be able to login.
-        
