--- a/include/i18n/en_US/help/tips/tickets.new_ticket.yaml
+++ b/include/i18n/en_US/help/tips/tickets.new_ticket.yaml
@@ -13,151 +13,99 @@
 # must match the HTML #ids put into the page template.
 #
 ---
-new_ticket_table_:
-    title: New Ticket (Table)
+new_ticket:
+    title: New Ticket
     content: >
-        
+
 user_information:
     title: User Information
     content: >
-        
+
 email_address:
     title: Email Address
     content: >
-        
+
 full_name:
     title: Full Name
     content: >
-        
+
 ticket_notice:
     title: Ticket Notice
     content: >
-        
+
 ticket_information_options:
     title: Ticket Information &amp; Options
     content: >
-        
+
 ticket_source:
     title: Ticket Source
     content: >
-        
+
 help_topic:
     title: Help Topic
     content: >
-        
+
 department:
     title: Department
     content: >
-        
+
 sla_plan:
     title: SLA Plan
     content: >
-        
+
 due_date:
     title: Due Date
     content: >
-        
+
 assign_to:
     title: Assign To
     content: >
-        
+
 ticket_details:
     title: Ticket Details
     content: >
-        
+
 issue_summary:
     title: Issue Summary
     content: >
-        
+
 issue_details:
     title: Issue Details
     content: >
-        
-issue_details_task_bar_:
-    title: Issue Details (Task Bar)
-    content: >
-        
-draft_saved:
-    title: Draft Saved
-    content: >
-        
-trash_button_image_:
-    title: Trash (Button Image)
-    content: >
-        
+
 priority_level:
     title: Priority Level
     content: >
-        
+
 response:
     title: Response
     content: >
-        
+
 canned_response:
     title: Canned Response
     content: >
-        
-append:
-    title: Append
-    content: >
-        
+        Include comments about the Append checkbox here too
+
 initial_response_for_the_ticket:
     title: Initial Response for the Ticket
     content: >
-        
-initial_response_task_bar_:
-    title: Initial Response (Task Bar)
-    content: >
-        
-draft_saved:
-    title: Draft Saved
-    content: >
-        
-trash_button_image_:
-    title: Trash (Button Image)
-    content: >
-        
+
 attachments:
     title: Attachments
     content: >
-        
+
 ticket_status:
     title: Ticket Status
     content: >
-        
+
 signature:
     title: Signature
     content: >
-        
+
 response:
     title: Response
     content: >
-        
+
 internal_note:
     title: Internal Note
     content: >
-        
-internal_note_task_bar_:
-    title: Internal Note (Task Bar)
-    content: >
-        
-draft_saved:
-    title: Draft Saved
-    content: >
-        
-trash_button_image_:
-    title: Trash (Button Image)
-    content: >
-        
-open_button_:
-    title: Open (Button)
-    content: >
-        
-reset_button_:
-    title: Reset (Button)
-    content: >
-        
-cancel_button_:
-    title: Cancel (Button)
-    content: >
-        
