--- a/include/i18n/en_US/templates/page/banner-client.yaml
+++ b/include/i18n/en_US/templates/page/banner-client.yaml
@@ -7,8 +7,7 @@
 notes: >
     This forms the header on the staff login page. It can be useful to
     inform your clients about your login and registration policies.
-name: "Sign In"
+name: "Sign in to %{company.name}"
 body: >
-    This help desk is for registered customers only. Please contact our
-    support team directly to have an account created so you can access the
-    help desk to submit tickets.
+    To better serve you, we encourage our clients to register for an account
+    and verify the email address we have on record.
