--- a/include/i18n/en_US/templates/page/registration-staff.yaml
+++ b/include/i18n/en_US/templates/page/registration-staff.yaml
@@ -16,7 +16,7 @@ body: >
     Please follow the link below to confirm your account and gain access to
     your tickets.<br />
     <br />
-    <a href="%{reset_link}">%{confirmation_link}</a><br />
+    <a href="%{link}">%{link}</a><br />
     <br />
     <em style="font-size: small">Your friendly Customer Support System
     <br />%{company.name}</em>
