Improve the Accounts Template notes in YAML files.
- Improve the wording and grammar of template notes.
- Fix formatting and/or wording for a few of the default
  templates.

--- a/include/i18n/en_US/templates/page/access-link.yaml
+++ b/include/i18n/en_US/templates/page/access-link.yaml
@@ -6,8 +6,9 @@
 #
 ---
 notes: >
-    Ticket access link sent to clients for guest-only systems where the ticket
-    number and email address will trigger an access link sent via email
+    This template defines the notification for Clients that an access link was 
+    sent to their email. The ticket number and email address trigger the access 
+    link.
 name: "Ticket [#%{ticket.number}] Access Link"
 body: >
     <h3><strong>Hi %{recipient.name.first},</strong></h3>
